--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
@@ -1,19 +1,19 @@
-<div #svg id="svg" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" style="padding: 10px;">
+<div id="svg" #svg fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" style="padding: 10px;">
 	<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<g clip-path="url(#clip0)">
-			<path id="Vector" fill="white"
+			<path id="left" fill="white"
 				d="M10.4072 29.2055L0.409788 39.2002L0.409785 0.420659L10.4072 10.5153C10.4072 10.5153 10.4072 29.3054 10.4072 29.2055Z"
 				stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
-			<path id="Vector_2"
+			<path id="internal"
 				d="M29.2028 29.2055L39.2002 39.2002L0.410145 39.2002L10.5076 29.2055C10.5076 29.2055 29.3027 29.2055 29.2028 29.2055Z"
 				fill="white" stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
-			<path id="Vector_3"
+			<path id="right"
 				d="M29.2028 10.5153L39.2002 0.520603L39.2002 39.2002L29.2028 29.1055C29.2028 29.2055 29.2028 10.3154 29.2028 10.5153Z"
 				fill="white" stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
-			<path id="Vector_4"
+			<path id="external"
 				d="M10.4076 10.4155L0.41014 0.420805L39.2002 0.420801L29.1028 10.4155C29.1028 10.4155 10.3076 10.4155 10.4076 10.4155Z"
 				fill="white" stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
-			<path id="Vector_5" d="M10.4079 29.3057L29.2031 29.3057L29.2031 10.5156L10.4079 10.5156L10.4079 29.3057Z"
+			<path id="central" d="M10.4079 29.3057L29.2031 29.3057L29.2031 10.5156L10.4079 10.5156L10.4079 29.3057Z"
 				fill="white" stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
 		</g>
 		<defs>
@@ -22,5 +22,5 @@
 			</clipPath>
 		</defs>
 	</svg>
-
 </div>
+
