--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
@@ -24,3 +24,41 @@
 	</svg>
 </div>
 
+<div #findings style="display: none;">
+	<svg id="red_circle" width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<circle cx="19" cy="19" r="18" stroke="#FF543E" stroke-width="2" />
+	</svg>
+	<svg id="blue_oval" width="7" height="19" viewBox="0 0 7 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<ellipse cx="3.5" cy="9.5" rx="3.5" ry="9.5" fill="#2687C5" fill-opacity="0.7" />
+	</svg>
+	<svg id="sellador" width="2" height="25" viewBox="0 0 2 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<path d="M1 24.5L1 0.000488281" stroke="#EB5757" stroke-width="2" />
+	</svg>
+	<svg id="red_cross" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<path d="M1 1L16.9997 16.9997" stroke="#EB5757" stroke-width="2" />
+		<path d="M1 17L16.9997 1.00027" stroke="#EB5757" stroke-width="2" />
+	</svg>
+	<svg id="blue_horizontal_line" width="14" height="2" viewBox="0 0 14 2" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<path d="M0 1H14" stroke="#2687C5" stroke-width="2" />
+	</svg>
+	<svg id="restos_radiculares" width="14" height="10" viewBox="0 0 14 10" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<path d="M0 1H14" stroke="#2687C5" stroke-width="2" />
+		<path d="M0 9H14" stroke="#2687C5" stroke-width="2" />
+	</svg>
+
+
+</div>
+
+<div #procedures style="display: none;">
+	<svg id="two_long_blue_lines" width="32" height="10" viewBox="0 0 32 10" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<path d="M0 1H32" stroke="#2687C5" stroke-width="2" />
+		<path d="M0 9H32" stroke="#2687C5" stroke-width="2" />
+	</svg>
+	<svg id="short_vertical_red_line" width="2" height="10" viewBox="0 0 2 10" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<path d="M1.83691 10H0.114258V0.046875H1.83691V10Z" fill="#EB5757" />
+	</svg>
+</div>
