--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
@@ -1,27 +1,29 @@
 <div id="svg" #svg fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" style="padding: 10px;">
-	<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+	<svg width="40" height="68" viewBox="0 0 40 68" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<g clip-path="url(#clip0)">
 			<path id="left" fill="white"
-				d="M10.4072 29.2055L0.409788 39.2002L0.409785 0.420659L10.4072 10.5153C10.4072 10.5153 10.4072 29.3054 10.4072 29.2055Z"
+				d="M10.4072 57.2055L0.409788 67.2002L0.409785 28.4207L10.4072 38.5153C10.4072 38.5153 10.4072 57.3054 10.4072 57.2055Z"
 				stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
-			<path id="internal"
-				d="M29.2028 29.2055L39.2002 39.2002L0.410145 39.2002L10.5076 29.2055C10.5076 29.2055 29.3027 29.2055 29.2028 29.2055Z"
-				fill="white" stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
-			<path id="right"
-				d="M29.2028 10.5153L39.2002 0.520603L39.2002 39.2002L29.2028 29.1055C29.2028 29.2055 29.2028 10.3154 29.2028 10.5153Z"
-				fill="white" stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
-			<path id="external"
-				d="M10.4076 10.4155L0.41014 0.420805L39.2002 0.420801L29.1028 10.4155C29.1028 10.4155 10.3076 10.4155 10.4076 10.4155Z"
-				fill="white" stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
-			<path id="central" d="M10.4079 29.3057L29.2031 29.3057L29.2031 10.5156L10.4079 10.5156L10.4079 29.3057Z"
-				fill="white" stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
+			<path id="internal" fill="white"
+				d="M29.2028 57.2055L39.2002 67.2002L0.410145 67.2002L10.5076 57.2055C10.5076 57.2055 29.3027 57.2055 29.2028 57.2055Z"
+				stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
+			<path id="right" fill="white"
+				d="M29.2028 38.5153L39.2002 28.5206L39.2002 67.2002L29.2028 57.1055C29.2028 57.2055 29.2028 38.3154 29.2028 38.5153Z"
+				stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
+			<path id="external" fill="white"
+				d="M10.4076 38.4155L0.41014 28.4208L39.2002 28.4208L29.1028 38.4155C29.1028 38.4155 10.3076 38.4155 10.4076 38.4155Z"
+				stroke="#4B4B4B" stroke-miterlimit="10" stroke-linejoin="round" />
+			<path id="central" fill="white"
+				d="M10.4079 57.3057L29.2031 57.3057L29.2031 38.5156L10.4079 38.5156L10.4079 57.3057Z" stroke="#4B4B4B"
+				stroke-miterlimit="10" stroke-linejoin="round" />
 		</g>
 		<defs>
 			<clipPath id="clip0">
-				<rect width="40" height="40" fill="white" transform="translate(40 40) rotate(180)" />
+				<rect width="40" height="68" fill="white" transform="translate(40 68) rotate(180)" />
 			</clipPath>
 		</defs>
 	</svg>
+
 </div>
 
 <div #findings style="display: none;">
@@ -47,6 +49,16 @@
 		<path d="M0 1H14" stroke="#2687C5" stroke-width="2" />
 		<path d="M0 9H14" stroke="#2687C5" stroke-width="2" />
 	</svg>
+	<svg id="red_horizontal_line" width="25" height="2" viewBox="0 0 25 2" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<path d="M0 1L24.4995 1" stroke="#EB5757" stroke-width="2" />
+	</svg>
+	<svg id="red_cross_and_red_vertical_line" width="18" height="57" viewBox="0 0 18 57" fill="none"
+		xmlns="http://www.w3.org/2000/svg">
+		<path d="M1 40L16.9997 55.9997" stroke="#EB5757" stroke-width="2" />
+		<path d="M1 56L16.9997 40.0003" stroke="#EB5757" stroke-width="2" />
+		<path d="M9.83691 15H8.11426V5.04688H9.83691V15Z" fill="#EB5757" />
+	</svg>
 
 
 </div>
@@ -61,4 +73,10 @@
 		xmlns="http://www.w3.org/2000/svg">
 		<path d="M1.83691 10H0.114258V0.046875H1.83691V10Z" fill="#EB5757" />
 	</svg>
+	<svg id="TC" width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<path
+			d="M8.20312 2.44141H5.09961V11H3.38379V2.44141H0.307617V1.04688H8.20312V2.44141ZM16.9189 7.75977C16.8187 8.82161 16.4268 9.65104 15.7432 10.248C15.0596 10.8405 14.1504 11.1367 13.0156 11.1367C12.2227 11.1367 11.5231 10.9499 10.917 10.5762C10.3154 10.1979 9.85059 9.66243 9.52246 8.96973C9.19434 8.27702 9.02344 7.47266 9.00977 6.55664V5.62695C9.00977 4.68815 9.17611 3.861 9.50879 3.14551C9.84147 2.43001 10.3177 1.87858 10.9375 1.49121C11.5618 1.10384 12.2819 0.910156 13.0977 0.910156C14.196 0.910156 15.0801 1.20866 15.75 1.80566C16.4199 2.40267 16.8096 3.24577 16.9189 4.33496H15.1963C15.1143 3.61947 14.9046 3.10449 14.5674 2.79004C14.2347 2.47103 13.7448 2.31152 13.0977 2.31152C12.3457 2.31152 11.7669 2.58724 11.3613 3.13867C10.9603 3.68555 10.7552 4.48991 10.7461 5.55176V6.43359C10.7461 7.50911 10.9375 8.32943 11.3203 8.89453C11.7077 9.45964 12.2728 9.74219 13.0156 9.74219C13.6947 9.74219 14.2051 9.58952 14.5469 9.28418C14.8887 8.97884 15.1051 8.4707 15.1963 7.75977H16.9189Z"
+			fill="#EB5757" />
+	</svg>
+
 </div>
