tg-2206 [P2] No se marca en rojo los campos obligatorios - cobertura obras sociales

--- a/front-end/apps/projects/hospital/src/app/modules/core/dialogs/medical-coverage/medical-coverage.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/core/dialogs/medical-coverage/medical-coverage.component.html
@@ -41,6 +41,7 @@
 							<span class="mat-body">{{getFullHealthInsuranceText(healthInsurance)}}</span>
 						</mat-option>
 					</mat-autocomplete>
+					<mat-error translate="forms.REQUIRED"></mat-error>
 				</mat-form-field>
 				<mat-form-field appearance="outline">
 					<input id="healthInsuranceAffiliateNumber" name="healthInsuranceAffiliateNumber"
@@ -98,6 +99,7 @@
 					<mat-form-field appearance="outline">
 						<input type="text" placeholder="{{ 'Ingresar Prepaga' | translate }}" aria-label="Number"
 							formControlName="name" matInput>
+						<mat-error translate="forms.REQUIRED"></mat-error>
 					</mat-form-field>
 					<mat-form-field appearance="outline">
 						<mat-label>Fecha de inicio</mat-label>
