--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
@@ -3,22 +3,29 @@
 		<div id="title">
 			<h2 [translate]="'ambulatoria.paciente.vacunas.TITLE'"></h2>
 		</div>
-		<div id="add_button" *appHasRole="['ENFERMERO']" >
+		<div id="add_button" *appHasRole="['ENFERMERO']">
 			<ng-container *ngIf="hasConfirmedAppointment">
 				<button mat-flat-button color="primary" (click)=goToAplicarVacuna()>
 					<span>{{'ambulatoria.paciente.vacunas.ADD' | translate | uppercase }}</span>
 				</button>
 			</ng-container>
 		</div>
+
+		<div id="add_button" *appHasRole="['ENFERMERO']">
+			<ng-container>
+				<button mat-flat-button color="primary" (click)=goToAplicarVacuna2()>
+					<span>{{'ambulatoria.paciente.vacunas2.ADD' | translate | uppercase }}</span>
+				</button>
+			</ng-container>
+		</div>
+
 	</div>
 
 	<div fxLayout="row" fxLayoutGap="20px">
 		<div fxFlex="50" fxFlex.xs="100">
-			<app-summary-card [header]="vacunasSummary"
-                  [tooltip]="'historia-clinica.summary-card.vacunas.TOOLTIP'"
-				  [canEdit]="['PROFESIONAL_DE_SALUD', 'ESPECIALISTA_MEDICO', 'ENFERMERO']"
-				  [editable]="true"
-				  (openInNew)="openDialog()">
+			<app-summary-card [header]="vacunasSummary" [tooltip]="'historia-clinica.summary-card.vacunas.TOOLTIP'"
+				[canEdit]="['PROFESIONAL_DE_SALUD', 'ESPECIALISTA_MEDICO', 'ENFERMERO']" [editable]="true"
+				(openInNew)="openDialog()">
 				<app-table [model]="tableModel" *ngIf="tableModel?.data?.length > 0 else noInfo"></app-table>
 				<ng-template #noInfo>
 					<app-no-data></app-no-data>
