--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -1,60 +1,81 @@
 <form [formGroup]="formMotivo" (ngSubmit)="saveAbsent()">
 	<div mat-dialog-content>
-		<section id="personal-data" fxLayout="column">
-			<div fxLayout="row" fxLayoutGap="3px" fxLayoutAlign="start center">
-				<mat-icon fontSet="material-icons-outlined" color="primary">person</mat-icon>
-				<span class="mat-body-strong">ID del paciente: {{appointmentData.patient.id}}</span>
-				<span class="mat-body-strong" *ngIf="appointmentData?.patient.typeId === TEMPORARY_PATIENT"> -
-					Temporal</span>
-				<span></span>
-			</div>
-			<div *ngIf="appointmentData.patient.fullName || appointmentData.patient.identificationNumber" fxLayout="row"
-				fxLayoutGap="3px" fxLayoutAlign="start center">
-				<mat-icon fontSet="material-icons-outlined" style="color: transparent">person</mat-icon>
-				<span class="mat-body patient-info">
-					<span *ngIf="appointmentData.patient.fullName">{{appointmentData.patient.fullName}} -</span>
-					<span
-						*ngIf="appointmentData.patient.identificationNumber">{{appointmentData.patient.identificationNumber}}</span>
-				</span>
-			</div>
-			<div fxLayout="row" fxLayoutGap="3px" fxLayoutAlign="start center">
-				<mat-icon fontSet="material-icons-outlined" style="color: transparent">person</mat-icon>
-				<span class="mat-body patient-info"> Obra social:</span>
-				<span class="mat-body patient-info coverage-text" *ngIf="coverageData"
-					matTooltip="{{coverageData.medicalCoverage.name}}">{{coverageText}} </span>
-				<span class="mat-body patient-info" *ngIf="coverageData">/ {{coverageData.affiliateNumber}}</span>
-			</div>
-			<div fxLayout="row" fxLayoutGap="3px" fxLayoutAlign="start center" class="mat-body patient-info">
-				<mat-icon fontSet="material-icons-outlined" style="color: transparent">person</mat-icon>
-				<app-editable-field *ngIf="( hasRoleToEditPhoneNumber$ | async ) else notEditablePhone"
-					[fieldName]="'turnos.appointment.phoneNumber.PHONE_NUMBER'" [value]="appointmentData.phoneNumber"
-					(newValueEmitted)="updatePhoneNumber($event)"></app-editable-field>
-				<ng-template #notEditablePhone>
+		<section id="personal-data" fxLayout="column" fxLayoutGap="10px">
+
+			<div fxLayout="row" fxLayoutAlign="space-around start">
+				<mat-icon fxFlex="10%" fontSet="material-icons-outlined" color="primary">person</mat-icon> 
+				<div fxLayout="column" fxLayoutAlign="center start">
+					<span class="mat-body-strong capitalize patient-name-title" *ngIf="appointmentData.patient.fullName"> {{ appointmentData.patient.fullName | uppercase }}</span>
 					<div>
-						<span [translate]="'turnos.appointment.phoneNumber.PHONE_NUMBER'"></span>:
-						<span>{{appointmentData.phoneNumber}}</span>
+						<span style="font-size: 16px;" id="patient_id" class="mat-body-strong">ID {{appointmentData.patient.id}}</span> • 
+						<span style="font-size: 16px;" class="mat-body-strong" *ngIf="appointmentData.patient.identificationNumber">DNI {{appointmentData.patient.identificationNumber}}</span> 
 					</div>
-				</ng-template>
+					<div>
+						<a class="mat-body" *appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO']"
+							[routerLink]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + appointmentData?.patient?.id"
+							(click)="closeDialog()">Ver historia clínica</a>
+					</div>
+				</div>
+				<div fxFlex="10%">
+					<button mat-icon-button color="primary" *ngIf="( hasRoleToEditPhoneNumber$ | async )" (click)="hideFilters()">
+						<mat-icon>edit</mat-icon>
+					</button>
+				</div>
 			</div>
-			<div fxLayout="row" fxLayoutGap="3px" fxLayoutAlign="start center">
-				<mat-icon fontSet="material-icons-outlined" style="color: transparent">person</mat-icon>
-				<a class="mat-body" *appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO']"
-					[routerLink]="'/institucion/' + institutionId + '/ambulatoria/paciente/' + appointmentData?.patient?.id"
-					(click)="closeDialog()">Ver historia clínica</a>
-			</div>
+
+			<ng-container *ngIf="!hideFilterPanel else editAppointment">
+				<div fxLayout="column" fxLayoutGap="5px">
+					<span class="mat-caption">{{'turnos.appointment.coverageData.COVERAGE_DATA' | translate}}</span>
+					<span class="mat-body patient-info coverage-text" *ngIf="coverageData"
+						matTooltip="{{coverageData.medicalCoverage.name}}">{{coverageText}} </span>
+				</div>
+				<div fxLayout="column" fxLayoutGap="5px">
+					<span class="mat-caption" [translate]="'turnos.appointment.phoneNumber.PHONE_NUMBER'">:</span>
+					<span class="mat-body patient-info coverage-text">{{appointmentData.phoneNumber}}</span>
+				</div>
+			</ng-container>
+
+			<ng-template #editAppointment>
+				<form [formGroup]="formEdit" fxLayout="column" fxLayoutGap="5px" (ngSubmit)="edit()">
+					<mat-form-field appearance="outline" *ngIf="isAssigned()">
+						<mat-label>{{'pacientes.form.MEDICAL_COVERAGE' | translate}}</mat-label>
+						<mat-select formControlName="newCoverageData">
+							<mat-option
+								*ngFor="let patientMedicalCoverage of patientMedicalCoverages" [value]="patientMedicalCoverage">
+								{{getFullMedicalCoverageText(patientMedicalCoverage)}}
+							</mat-option>
+							<mat-divider></mat-divider>
+							<mat-option (click)="openMedicalCoverageDialog()">
+								<span class="color-primary" [translate]="'ambulatoria.paciente.ordenes_prescripciones.new_prescription_dialog.UPDATE_COVERAGE'"></span>
+							</mat-option>
+						</mat-select>
+					</mat-form-field>
+					<mat-form-field class="input" appearance="outline">
+						<mat-label [translate]="'turnos.appointment.phoneNumber.PHONE_NUMBER'"></mat-label>
+						<input matInput formControlName="phoneNumber"
+								type="tel"
+								id="phonenumber"
+								name="phonenumber">
+					</mat-form-field>
+					<div align="end">
+						<button mat-flat-button color="primary" type="submit">
+							<span class="uppercase">Guardar</span>
+						</button>
+					</div>
+				</form>
+			</ng-template>
+			<mat-divider></mat-divider>
 		</section>
 
-		<section id="appointment">
-			<span class="mat-body-strong">Turno Asignado</span>
+		<section id="appointment" fxLayout="column">
+			<span class="mat-body-strong">Turno</span>
 			<div fxLayout="column" fxLayoutGap="3px">
-				<div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="start center" id="full-date">
-					<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true">
+				<div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="space-around center">
+					<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true" id="full-date">
 						calendar_today
 					</mat-icon>
-					<span class="mat-body"> {{appointmentData.date | date:"fullDate" }}</span>
-				</div>
-				<div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="start center" id="hour">
-					<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true">
+					<span class="mat-body"> {{appointmentData.date | date:"fullDate"}}</span>
+					<mat-icon fontSet="material-icons-outlined" color="primary" mat-list-icon [inline]="true" id="hour">
 						access_time
 					</mat-icon>
 					<span class="mat-body"> {{appointmentData.date | date:"HH:mm"}} hs</span>
