--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.scss
@@ -1,5 +1,9 @@
 @import "../../../../../assets/styles/mixins.scss";
 
+.patient-name-title {
+	font-size: 18px;
+}
+
 .appointment-information {
 	height: auto;
 }
@@ -18,6 +22,11 @@
 
 mat-icon {
 	font-size: 20px;
+}
+
+a {
+	text-decoration: none; 
+	color: #2687C5;
 }
 
 .appointment-actions {
