--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
@@ -3,12 +3,14 @@
 	<div id="layout_header" fxLayout="row" fxLayoutAlign="space-between" fxLayout.lt-sm="column">
 		<mat-card-header>
 			<img mat-card-md-image mat-card-avatar [src]="decodedPhoto$ | async" onerror="this.src='../../../../../assets/images/empty-profile.png'">
-			<mat-card-title>
+			<mat-card-title class="card-style-1">
 				<span id="title" class="capitalize">
 					{{ patient?.firstName }} {{patient?.middleNames}} {{patient?.lastName}} {{patient?.otherLastNames}}
 				</span>
-				<span id="patient_id" class="uppercase">ID {{patient?.id}}</span>
 			</mat-card-title>
+			<mat-card-title class="card-style-2">
+				<span id="patient_id">{{viewIDAndIdentificationTypeAndNumber()}}</span>
+			</mat-card-title>	
 			<mat-card-subtitle>
 				<span id="gender_age" [translate]=viewGenderAge()></span>
 			</mat-card-subtitle>
