tg-4379 Se generan x consultas ambulatorias al hacer varios clicks en el botón de confirmación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -569,7 +569,7 @@
 	</div>
 	<div actions id="buttons">
 		<div align="end">
-			<button class="uppercase" mat-raised-button color="primary" (click)="save()">
+			<button class="uppercase" mat-raised-button color="primary" (click)="save()" [disabled]="disableConfirmButton">
 				<span [translate]="'buttons.CONFIRM'"></span>
 			</button>
 		</div>
