--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
@@ -433,7 +433,7 @@
 				<button mat-stroked-button color="secondary" (click)="goBack()">
 					<span [translate]="'buttons.BACK'"></span>
 				</button>
-				<button mat-raised-button color="primary" type="submit">
+				<button mat-raised-button color="primary" type="submit" [disabled]="isSubmitButtonDisabled">
 					<span [translate]="'buttons.CONTINUE'"></span>
 				</button>
 			</div>
