tg-3689 Al clickear confirmar más de una vez en asignación de turno genera datos inconsistentes

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-appointment/new-appointment.component.html
@@ -133,7 +133,7 @@
     <button mat-stroked-button color="primary" mat-dialog-close>
 		<span [translate]="'buttons.CANCEL'"></span>
     </button>
-	<button mat-raised-button color="primary" *ngIf="showConfirmButton()" (click)="submit()">
+	<button mat-raised-button color="primary" *ngIf="showConfirmButton()" (click)="submit()" [disabled]="isSubmitButtonDisabled">
 		<span [translate]="'buttons.CONFIRM'"></span>
 	</button>
 </mat-dialog-actions>
