tg-4445 [P1] Cuando la obra social tiene muchos caracteres se imprime la seccion de firma en otra pagina

--- a/back-end/hospital-api/src/main/resources/templates/fragments/appointments-report-anexo.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/appointments-report-anexo.html
@@ -31,7 +31,7 @@
         }
 
         .date, .code-hpgd, .doc-number, .beneficiary-type, .relationship-type, .gender, .age,
-        .attention-type, .coverage-data, .coverage-code, .company-data,
+        .attention-type, .coverage-code, .company-data,
         .coverage-number, .coverage-emision-date, .coverage-expiration, .receipt,
         .month, .year, .company-cuit, .administratives-signature,
         .signature-clarification, .beneficiarys-signature {
@@ -104,7 +104,6 @@
 
         .signature-section {
             width: 650px;
-            height: 180px;
             display: inline;
         }
 
@@ -118,7 +117,7 @@
 
         .doctors-signature {
             text-align: center;
-            margin-top: 20%
+            margin-top: 16%
         }
 
         .coverage-data {
