tg-4449 [P3] Agrega acento en campo de pdf

--- a/back-end/hospital-api/src/main/resources/templates/fragments/appointments-report-anexo.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/appointments-report-anexo.html
@@ -289,7 +289,7 @@
         </div>
         <div class="receipt">
             <div class="border-bottom">&nbsp;</div>
-            <div>Ultimo recibo de sueldo</div>
+            <div>Último recibo de sueldo</div>
         </div>
         <div class="month">
             <div class="border-bottom">MES</div>
