tg-4353. Crea primer pantalla de agregar vacunas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
@@ -13,7 +13,7 @@
 
 		<div id="add_button" *appHasRole="['ENFERMERO']">
 			<ng-container>
-				<button mat-flat-button color="primary" (click)=goToAplicarVacuna2()>
+				<button mat-flat-button color="primary" (click)=goToAgregarVacunas()>
 					<span>{{'ambulatoria.paciente.vacunas2.ADD' | translate | uppercase }}</span>
 				</button>
 			</ng-container>
