--- a/front-end/apps/projects/hospital/src/assets/styles/mat-mixins.scss
+++ b/front-end/apps/projects/hospital/src/assets/styles/mat-mixins.scss
@@ -292,3 +292,12 @@ $default-color: 50;
 		background-color: mat-color($primary-palette);
 	}
 }
+
+@mixin color-for-inmunization-dose($theme) {
+	$accent-palette: map-get($theme, accent);
+
+	.dose-color {
+		color: mat-color($accent-palette, darker);
+		background-color: mat-color($accent-palette, lighter);
+	}
+}
