tg-4473 Error al intentar actualizar cobertura o teléfono en un turno con estado Ausente
(cherry picked from commit 31b7a5bb67aa833fea8ca6eaf73774d671ed6a35)

--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/appointment/appointment.component.html
@@ -16,7 +16,7 @@
 							(click)="closeDialog()">Ver historia clínica</a>
 					</div>
 				</div>
-				<button mat-icon-button color="primary"  fxFlex="10%" *ngIf="( hasRoleToEditPhoneNumber$ | async )" (click)="hideFilters()">
+				<button type="button" mat-icon-button color="primary"  fxFlex="10%" *ngIf="( hasRoleToEditPhoneNumber$ | async )" (click)="hideFilters()">
 					<mat-icon>edit</mat-icon>
 				</button>
 			</div>
