--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna-2/aplicar-vacuna-2.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna-2/aplicar-vacuna-2.component.html
@@ -1,112 +1,109 @@
-<div mat-dialog-title>
-	<div class="mat-h2" [translate]="'ambulatoria.paciente.vacunas2.aplicar.TITLE'"></div>
+<div mat-dialog-title fxLayout="row" fxLayoutAlign="space-between">
+	<div class="mat-h2" [translate]="'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.TITLE'"> </div>
+	<button mat-button class="close-icon" [mat-dialog-close]="true" tabindex="-1">
+		<mat-icon>close</mat-icon>
+	</button>
 </div>
 
 <div mat-dialog-content>
 
-	<div fxLayout="row">
-		<div class="mat-h4" [translate]="'Especialidad'"></div>
-	</div>
-	<div fxLayout="row" [formGroup]="form">
-		<mat-form-field appearance="outline">
-			<mat-select id="clinicalSpecialtyId" name="clinicalSpecialty" formControlName="clinicalSpecialty"
-				(selectionChange)="setDefaultSpecialty()" [attr.disabled]="fixedSpecialty">
-				<mat-option *ngFor="let clinicalSpecialty of this.specialties" [value]="clinicalSpecialty">
-					<span class="mat-body">{{clinicalSpecialty.name}}</span>
-				</mat-option>
-			</mat-select>
-			<mat-error [translate]="'forms.REQUIRED'"></mat-error>
-		</mat-form-field>
-	</div>
+	<mat-tab-group mat-align-tabs="center">
+		<mat-tab
+			label="{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.BILLABLE_TAB_LABEL' | translate }}">
 
-	<div class="spinner" *ngIf="loading && !snowstormServiceNotAvailable else addInmunization">
-		<mat-spinner color="primary"></mat-spinner>
-	</div>
+			<form [formGroup]="billableForm" (submit)="submit()">
+				<div fxLayout="column">
+					<mat-label>
+						{{ 'ambulatoria.paciente.vacunas.aplicar.ADMINISTRATION_DATE' | translate }}
+					</mat-label>
+					<mat-form-field appearance="outline">
+						<input placeholder="mm/dd/yyyy" matInput [value]="this.today" [matDatepicker]="myDatepicker"
+							formControlName="date" [max]="this.today" required>
+						<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+						<mat-datepicker #myDatepicker startView="multi-year" (yearSelected)="chosenYearHandler($event)"
+							(monthSelected)="chosenMonthHandler($event)">
+						</mat-datepicker>
+						<mat-error [translate]="'forms.REQUIRED'"></mat-error>
+					</mat-form-field>
 
+					<mat-label>
+						{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.INMUNIZATION' | translate }}
+					</mat-label>
+					<mat-form-field appearance="outline">
+						<input matInput required formControlName="snomed">
+						<mat-error [translate]="'forms.REQUIRED'"></mat-error>
+					</mat-form-field>
 
-	<ng-template #addInmunization>
+					<mat-label>
+						{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.CONDITION' | translate }}
+					</mat-label>
+					<mat-form-field appearance="outline">
+						<mat-select required formControlName="condition">
+							<mat-option *ngFor="let condition of conditions" [value]="condition">
+								{{condition}}
+							</mat-option>
+						</mat-select>
+						<mat-error [translate]="'forms.REQUIRED'"></mat-error>
+					</mat-form-field>
 
-		<form [formGroup]="form" (ngSubmit)="save()">
-			<div mat-dialog-content>
-
-				<app-concepts-search *ngIf="!snomedConcept else vacunasForm"
-					[label]="'ambulatoria.paciente.vacunas2.aplicar.INMUNIZATION'" (search)="onSearch($event)">
-				</app-concepts-search>
-
-				<div class="spinner">
-					<mat-spinner diameter="70" color="primary" *ngIf="searching && !snowstormServiceNotAvailable">
-					</mat-spinner>
-				</div>
-
-				<div *ngIf="snowstormServiceNotAvailable">
-					<span [translate]="'historia-clinica.snowstorm.SERVICE_NOT_AVAILABLE'"> </span>
-				</div>
-
-				<app-table *ngIf="!searching && !snomedConcept" [model]="conceptsResultsTable"></app-table>
-
-				<ng-template #vacunasForm>
-					<div>
-						<div fxLayout="row" fxLayout.lt-lg="column" fxLayoutGap="2%">
-
+					<div fxLayout="row" fxLayoutAlign="space-between">
+						<div fxLayout="column" fxFlex="50%">
+							<mat-label>
+								{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.SCHEME' | translate }}
+							</mat-label>
 							<mat-form-field appearance="outline">
-								<mat-label [translate]="'ambulatoria.paciente.vacunas2.aplicar.INMUNIZATION'">
-								</mat-label>
-								<input matInput type="text" formControlName="snomed" name="snomed" readonly
-									matTooltip="{{ snomedConcept.pt }}">
-								<button id="clear" mat-button matSuffix color="warn" mat-icon-button
-									(click)="resetForm()">
-									<mat-icon>close</mat-icon>
-								</button>
-							</mat-form-field>
-
-							<mat-form-field appearance="outline">
-								<mat-label [translate]="'ambulatoria.paciente.vacunas2.aplicar.ADMINISTRATION_DATE'">
-								</mat-label>
-								<input matInput id="date" [matDatepicker]="myDatepicker" formControlName="date"
-									[max]="this.today">
-								<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
-								<mat-datepicker #myDatepicker startView="multi-year"
-									(yearSelected)="chosenYearHandler($event)"
-									(monthSelected)="chosenMonthHandler($event)">
-								</mat-datepicker>
+								<mat-select required formControlName="scheme">
+									<mat-option *ngFor="let scheme of schemes" [value]="scheme">
+										{{scheme}}
+									</mat-option>
+								</mat-select>
 								<mat-error [translate]="'forms.REQUIRED'"></mat-error>
 							</mat-form-field>
 						</div>
-
-						<mat-form-field [floatLabel]="'never'" appearance="outline">
-							<mat-label [translate]="'ambulatoria.paciente.vacunas2.aplicar.NOTE'"></mat-label>
-							<textarea maxlength="1024" matInput type="text" id="note" name="note"
-								formControlName="note"></textarea>
-							<mat-error [translate]="'forms.REQUIRED'"></mat-error>
-						</mat-form-field>
-
+						<div fxLayout="column" fxFlex="50%">
+							<mat-label>
+								{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.DOSE' | translate }}
+							</mat-label>
+							<mat-form-field appearance="outline">
+								<mat-select required formControlName="dose">
+									<mat-option *ngFor="let dose of doses" [value]="dose">
+										{{dose}}
+									</mat-option>
+								</mat-select>
+								<mat-error [translate]="'forms.REQUIRED'"></mat-error>
+							</mat-form-field>
+						</div>
 					</div>
-				</ng-template>
-			</div>
 
-			<div *ngIf="tableModel?.data?.length > 0" fxLayout="row" fxLayoutGap="20px">
-				<app-summary-card [header]="vacunasSummary" style="width: 100%"
-					[tooltip]="'historia-clinica.summary-card.vacunas2.TOOLTIP'">
-					<app-table [model]="tableModel"></app-table>
-				</app-summary-card>
-			</div>
+					<mat-label>
+						{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.LOT' | translate }}
+					</mat-label>
+					<mat-form-field appearance="outline">
+						<input matInput formControlName="lot">
+					</mat-form-field>
 
-			<mat-dialog-actions align="end">
-				<button mat-stroked-button color="primary" mat-dialog-close> {{ 'buttons.CANCEL' | translate | uppercase
-					}}
-				</button>
-				<button (click)="applyVaccine()" *ngIf="snomedConcept" mat-raised-button color="primary">
-					{{'ambulatoria.paciente.vacunas2.aplicar.TITLE' | translate | uppercase}}
-				</button>
-				<button type="submit" *ngIf="this.appliedVaccines.length >= 1 && !snomedConcept" mat-raised-button
-					color="primary">
-					{{'ambulatoria.paciente.vacunas2.aplicar.SUBMIT_CONJUNTO_VACUNAS' | translate | uppercase}}
-				</button>
-			</mat-dialog-actions>
+					<mat-label>
+						{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.NOTE' | translate }}
+					</mat-label>
+					<mat-form-field appearance="outline">
+						<textarea matInput formControlName="note" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="5">
+						</textarea>
+					</mat-form-field>
 
-		</form>
+					<div fxLayout="row" fxLayoutAlign="end">
+						<button type="submit" mat-flat-button color="primary">
+							{{ 'buttons.ADD' | translate | uppercase }}
+						</button>
+					</div>
+				</div>
+			</form>
 
+		</mat-tab>
 
-	</ng-template>
+		<mat-tab
+			label="{{ 'ambulatoria.paciente.vacunas2.agregar_vacunas.aplicar_vacuna.PREVIOUS_TAB_LABEL' | translate }}">
+			Content 2
+		</mat-tab>
+	</mat-tab-group>
 
 </div>
