--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna-2/aplicar-vacuna-2.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/aplicar-vacuna-2/aplicar-vacuna-2.component.scss
@@ -1,10 +1,3 @@
-@import '../../../../../../../assets/styles/mixins';
-
-div.spinner {
-  @include centered-spinner;
-}
-
-mat-form-field {
-  font-size: 14px;
-  width: 100%;
+form {
+  font-size: 15px;
 }
